Added OAuth2, authentication, authorisation, OAuth2 login with Facebook; Added ExceptionHandlerAdvice for handle security-specific Exceptions; Added JWT-blacklist for invalid tokens after Logout; Added restricting access to book reviews functionality; Done refactoring;